--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ticketing
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketing
 spring.datasource.username=root
-spring.datasource.password=87458349936Aa.
+spring.datasource.password=xxx
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 
